[gd_scene load_steps=2 format=3 uid="uid://dk4wrveb4amb6"]

[ext_resource type="Script" uid="uid://dcvhamebgboom" path="res://UIAnimationTesting.gd" id="1_4b65k"]

[node name="UIAnimationTesting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4b65k")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -398.0
offset_top = 22.0
offset_right = 398.0
offset_bottom = 62.0
grow_horizontal = 2
alignment = 1

[node name="ResetPositionCenter" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Reset Position"

[node name="SlideFromLeft" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Slide from Left"

[node name="SlideToLeft" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Slide to Left"

[node name="SlideFromRight" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Slide from Right"

[node name="SlideToRight" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Slide to Right"

[node name="Popup" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Popup"

[node name="Shrink" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Shrink"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.5
offset_top = -149.0
offset_right = 154.5
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 22.0
offset_right = -18.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Testing Panel"
horizontal_alignment = 1

[connection signal="pressed" from="HBoxContainer/ResetPositionCenter" to="." method="_on_reset_position_center_pressed"]
[connection signal="pressed" from="HBoxContainer/SlideFromLeft" to="." method="_on_slide_from_left_pressed"]
[connection signal="pressed" from="HBoxContainer/SlideToLeft" to="." method="_on_slide_to_left_pressed"]
[connection signal="pressed" from="HBoxContainer/SlideFromRight" to="." method="_on_slide_from_right_pressed"]
[connection signal="pressed" from="HBoxContainer/SlideToRight" to="." method="_on_slide_to_right_pressed"]
[connection signal="pressed" from="HBoxContainer/Popup" to="." method="_on_popup_pressed"]
[connection signal="pressed" from="HBoxContainer/Shrink" to="." method="_on_shrink_pressed"]
